# slackbot

./: Main.hs  README.md  slackbot.cabal  stack.yaml
app/: Main.hs
src/: Bot.hs  Lib.hs  Main.hs  Utils.hs
work/: frame.tex  run.sh
