name:                slackbot
version:             0.1.0.0
synopsis:            My slack bot
description:         Please see README.md
homepage:            https://github.com/kentahama/slackbot#readme
license:             BSD3
license-file:        LICENSE
author:              Kenta Hamanaka
maintainer:          hamanaka@cs.info.mie-u.ac.jp
copyright:           2017 Kenta Hamanaka
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable slackbot
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , slack-api
                     , lens
                     , text
  default-language:    Haskell2010
